--- a/Study/선형회귀모델3.md
+++ b/Study/선형회귀모델3.md
@@ -34,7 +34,7 @@
 
 ## 기울기에 대한 가설검정
 - 알려지지 않은 파라미터에 대한 가설을 세우고 이를 검정
-- 일종오류 a(알파) 하에서 기울기가 0인지 아닌지 검정
+- 일종오류 ∝ 하에서 기울기가 0인지 아닌지 검정
 
 ![image](https://user-images.githubusercontent.com/79880336/109665286-5925a800-7bb1-11eb-9f29-72834b1c93dc.png)
 
