--- a/Study/선형회귀모델3.md
+++ b/Study/선형회귀모델3.md
@@ -1,16 +1,21 @@
 ### 3장 추정된 파라미터에 대한 추정과 가설검정
 
 ## 파라미터 추정 알고리즘
-![image](https://user-images.githubusercontent.com/79880336/109665420-7d818480-7bb1-11eb-9e5b-a22f48d21fa8.png)
 
+- Least square estimator
+
+![image](https://user-images.githubusercontent.com/79880336/109811240-e75f6400-7c6d-11eb-9d36-1ce055975d8b.png)
+
+
+![image](https://user-images.githubusercontent.com/79880336/109665420-7d818480-7bb1-11eb-9e5b-a22f48d21fa8.png)
 
 - Estimator(추정량) : 샘플의 함수 
 - 추정량의 용도 : 알려지지 않은 파라미터(B0,B1)를 추정
 - 추정량의 종류
-1) 점추정 (point estimator)
-2) 구간추정 (interval estimator)
+(1) 점추정 (point estimator) , (2) 구간추정 (interval estimator)
 
 ## 파라미터에 대한 점추정
+
 ![image](https://user-images.githubusercontent.com/79880336/109665456-870aec80-7bb1-11eb-84d6-ddd1c722025c.png)
 
 
