--- a/Study/선형회귀모델3.md
+++ b/Study/선형회귀모델3.md
@@ -23,8 +23,8 @@
 - Gauss-Markov 이론에 의하면 최소제곱법에서 추정되는 B0과 B1은 Best Linear Unbiased Estimator(BLUE)
 
   - BLUE의 특징
-    1. 편중되지 않은(불편) 추정량이다.
-    2. 가장 작은 분산은 갖고 있다.
+    (1) 편중되지 않은 (불편)추정량이다.
+    (2) 가장 작은 분산은 갖고 있다.
     
  ![image](https://user-images.githubusercontent.com/79880336/109664724-c8e76300-7bb0-11eb-9c00-84d6e1ec5d00.png)
 
@@ -36,6 +36,8 @@
 - 기울기에 대한 신뢰구간
 
 ![image](https://user-images.githubusercontent.com/79880336/109664907-00560f80-7bb1-11eb-815c-5a9c30444be5.png)
+
+(B0는 많이 활용되지는 않음, 참고용)
 
 ## 기울기에 대한 가설검정
 - 알려지지 않은 파라미터에 대한 가설을 세우고 이를 검정
