--- a/Study/선형회귀모델3.md
+++ b/Study/선형회귀모델3.md
@@ -29,6 +29,8 @@
  ![image](https://user-images.githubusercontent.com/79880336/109664724-c8e76300-7bb0-11eb-9c00-84d6e1ec5d00.png)
 
 ## 파라미터에 대한 구간추정
+- 점추정 
+- 구간추정
 - 구간으로 추정하여 보다 유연한 정보 제공
 
 ![image](https://user-images.githubusercontent.com/79880336/109664852-ef0d0300-7bb0-11eb-8255-ca89a9880712.png)
