--- a/Study/선형회귀모델4.md
+++ b/Study/선형회귀모델4.md
@@ -2,31 +2,39 @@
 
 
 ## 결정계수 (Coefficient of Determination : R^2)
-![image](https://user-images.githubusercontent.com/79880336/109666846-ec131200-7bb2-11eb-9943-716d48128031.png)
+
+![image](https://user-images.githubusercontent.com/79880336/109817984-dca8cd00-7c75-11eb-8ba9-e8187e3be7e5.png)
 
 위에서부터 첫번째 점은 실제 Y값
 두번째 점은 우리가 구한 회귀 직선 위에 있는 Y값
 세번째 점은 Y의 평균값
 
+![image](https://user-images.githubusercontent.com/79880336/109817915-cb5fc080-7c75-11eb-9399-db3a8daab583.png)
+
 그러니 첫번째 점은 100% Y값을 설명(자신이니까)
 두번째 점은 X로 Y를 어느 정도까지 설명할 수 있는지를 보여주는 값
 세번째 점은 X에 관계없이 Y의 평균만으로 어느 정도까지 설명할 수 있는지를 보여주는 것
 
-그러므로, 실제 Y값과 직선 위에 있는 Y값(두 번째 점)의 차이의 합을 계산해보면
+실제 Y값과 직선 위에 있는 Y값 (두번째 점)의 차이의 합을 계산해보면
+
 ![image](https://user-images.githubusercontent.com/79880336/109667153-32687100-7bb3-11eb-8d21-ceeab76c525d.png)
 
-그리고, 직선 위에 있는 Y값과 Y의 평균값의 차이의 합을 계산해 보면
+직선 위에 있는 Y값과 Y의 평균값의 차이의 합을 계산해 보면
+
 ![image](https://user-images.githubusercontent.com/79880336/109667189-3dbb9c80-7bb3-11eb-86de-5b5cd0dac62b.png)
 
-그리고, 실제 Y값과 Y의 평균값의 차이의 합을 계산해 보면
+실제 Y값과 Y의 평균값의 차이의 합을 계산해 보면
+
 ![image](https://user-images.githubusercontent.com/79880336/109667240-4a3ff500-7bb3-11eb-95b4-b0d754e4607f.png)
 
-그러므로 SSR이 높을수록 X로 Y를 설명할 수 있을 것이며 SSR/SST = 1이 되면 X로 Y를 100% 설명할 수 잇게 되므로 확정적인 관계가 된다. 반대로, SSR/SST = 0이 되면 X에 관계 없이 Y를 설명할 수 있게 된다.
+그러므로 SSR이 높을수록 X로 Y를 설명할 수 있을 것이며 SSR/SST = 1이 되면 X로 Y를 100% 설명할 수 잇게 되므로 확정적인 관계가 된다. 
+반대로, SSR/SST = 0이 되면 X에 관계 없이 Y를 설명할 수 있게 된다.
 
 이 SSR/SST가 뭐냐면 바로
+
 ![image](https://user-images.githubusercontent.com/79880336/109667295-588e1100-7bb3-11eb-8aed-5e0db20422df.png)
 
-인, 우리가 다루고자 했던 결정계수이다.
+결정계수이다.
 
 ![image](https://user-images.githubusercontent.com/79880336/109667343-65ab0000-7bb3-11eb-9205-0e2e39afc5c7.png)
 
