--- a/Study/선형회귀모델4.md
+++ b/Study/선형회귀모델4.md
@@ -19,13 +19,19 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/109667153-32687100-7bb3-11eb-8d21-ceeab76c525d.png)
 
+(X로 설명할 수 없는 것, 에러에 의해 설명된양)
+
 직선 위에 있는 Y값과 Y의 평균값의 차이의 합을 계산해 보면
 
 ![image](https://user-images.githubusercontent.com/79880336/109667189-3dbb9c80-7bb3-11eb-86de-5b5cd0dac62b.png)
 
+(X로 얼마만큼 설명할 수 있는지, X변수에 의해 섧명된 양) 
+
 실제 Y값과 Y의 평균값의 차이의 합을 계산해 보면
 
 ![image](https://user-images.githubusercontent.com/79880336/109667240-4a3ff500-7bb3-11eb-95b4-b0d754e4607f.png)
+
+(Y의 총 변동량)
 
 그러므로 SSR이 높을수록 X로 Y를 설명할 수 있을 것이며 
 SSR/SST = 1이 되면 X로 Y를 100% 설명할 수 잇게 되므로 확정적인 관계가 된다. 
@@ -46,11 +52,11 @@ SSR/SST = 1이 되면 X로 Y를 100% 설명할 수 잇게 되므로 확정적인
 - 단순히 Y의 평균값을 사용했을 때 대비 X정보를 사용함으로써 얻는 성능향상의 정도
 - 사용하고 있는 X변수의 품질
 
-## 수정 결정계수
--R^2는 유의하지 않은 변수가 추가되어도 항상 증가됨
+## 수정 결정계수 (Adjusted R^2)
 
 ![image](https://user-images.githubusercontent.com/79880336/109667808-db16d080-7bb3-11eb-9dec-7cf501a00567.png)
 
+- R^2는 유의하지 않은 변수가 추가되어도 항상 증가됨
 - 수정 R^2는 앞에 특정 계수를 곱해 줌으로써 (보정) 유의하지 않은 변수가 추가될 경우 증가하지 않게 함
 - 설명변수가 서로 다른 회귀모형의 설명력을 비교할 때 사용
 
