--- a/Study/로직스틱회귀모델.md
+++ b/Study/로직스틱회귀모델.md
@@ -96,3 +96,41 @@ Odds = 1/(1-1) = infinite이므로 무한대가 된다.
 
 또한 성공 확률이 0이 되면 log(Odds)의 값은
 dds = 0/(1-0) = 0이므로 -infinite로 수렴하게 된다.
+
+## 다중 로직스틱 회귀모델
+
+![image](https://user-images.githubusercontent.com/79880336/110304271-b94b9c80-803e-11eb-8276-eda27acd5a6b.png)
+
+## 파라미터 추정
+- 로지스틱 회귀모델 학습 : 최대 우도 추정법(Maximum Likelihood Estimation)
+
+
+- 위 로그 우도함수가 최대가 되는 파라미터 beta 결정
+- 로그 우도함수는 파라미터 beta에 대해 비선형이므로 선형회귀모델과 같이 명시적인 해가 존재하지 않음
+- Iterative reweight least square, Conjugate gradient, Newton's method 등의 수치 최적화 알고리즘을 이용해 해를 구함
+
+Cross Entropy : 두 확률분포 (p(x), q(x))의 차이, 음의 로그 우도함수의 기대값
+
+![image](https://user-images.githubusercontent.com/79880336/110304418-eef08580-803e-11eb-8d6a-e1d1cccd9191.png)
+
+로그 우도함수의 최대 - 입력 분포 p(x)와 파라미터가 주어졌을 때, 출력분포 q(x)의 확률을 최대
+Cross Entropy의 최소 - 입력 분포 p(x)와 출력 분포 q(x)의 차이를 최소
+
+![image](https://user-images.githubusercontent.com/79880336/110304463-fc0d7480-803e-11eb-8c5c-b0ca93894c32.png)
+
+## 로지스틱 회귀모델 - 결과 및 해석
+
+![image](https://user-images.githubusercontent.com/79880336/110304526-0f204480-803f-11eb-8947-021c1d171e64.png)
+
+선형회귀모델 : 입력변수가 1단위 증가할 때 출력변수의 변화량
+로지스틱 회귀모델 : 입력변수가 1단위 증가할 때 log Odd의 변화량
+
+# 승산 비율 (Odds Ratio)
+
+![image](https://user-images.githubusercontent.com/79880336/110304610-24956e80-803f-11eb-9edf-5e7350f35d30.png)
+
+- 나머지 입력변수는 모두 고정시킨 상태에서 한 변수를 1단위 증가시켰을 때 변화하는 Odds의 비율
+- x1이 1단위 증가하면 성공에 대한 승산비율이 e^beta1 만큼 변화함
+- 회귀 계수가 양수 -> 성공확률 증가(성공확률 >= 1)
+- 회귀 계수가 음수 -> 성공확률 감소(0 <= 성공확률 < 1)
+
