--- a/Study/로직스틱회귀모델.md
+++ b/Study/로직스틱회귀모델.md
@@ -134,3 +134,19 @@ Cross Entropy의 최소 - 입력 분포 p(x)와 출력 분포 q(x)의 차이를 
 - 회귀 계수가 양수 -> 성공확률 증가(성공확률 >= 1)
 - 회귀 계수가 음수 -> 성공확률 감소(0 <= 성공확률 < 1)
 
+![image](https://user-images.githubusercontent.com/79880336/110325801-23723a80-805b-11eb-90ba-e2fe791e8b6a.png)
+
+Coefficient(로지스틱 회귀계수, 추정된 파라미터 값)
+- 해당 변수가 1단위 증가할 때 Log Odds의 변화량
+- 양수이면 성공확률과 양의 상관관계, 음수이면 성공확률과 음의 상관관계
+
+Std. Error(추정 파라미터의 표준편차):
+- 추정 파라미터의 신뢰구간 (구간추정)을 구축할 때 사용
+
+p-value
+- 해당 변수가 통계적으로 유의미한지 여부를 알려주는 지표
+- 해당 파라미터 값이 0인지 여부를 통계적으로 판단(가설 검정)
+
+Odds(Odds Ratio)
+- 나머지 입력변수는 모두 고정시킨 상태에서 한 변수를 1단위 증가시켰을 때 변화하는 Odds(성공확률)의 비율
+- ex.) Experience = 1.058 -> 경험이 1년 더 많으면 대출 확률이 1.058배 증가
