--- a/Study/로직스틱회귀모델.md
+++ b/Study/로직스틱회귀모델.md
@@ -5,30 +5,32 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/110303310-95d42200-803d-11eb-8e37-5b39332061c0.png)
 
-기존까지의 선형회귀모델에서는 수치형 변수가 Y값에 있었던 데에 반해, 
-Y값에 범주형 변수가 오게 될 경우에는 조금 다른 방법으로 접근해야 할 필요성이 생겼다. 
-왜냐하면 기존의 선형회귀모델에서는 오차항이 정규분포를 따른다든가 하는 몇 가지 제약조건이 전제되어야 했는데, 
-이러한 범주형 데이터에서는 그러한 제약조건에 부합하지 않는 경우도 종종 발생하기 때문이다. 
+선형회귀모델에서는 수치형 변수가 Y값에 있었고
+Y값에 범주형 변수가 오게 될 경우에는 조금 다른 방법으로 접근해야 할 필요성이 생겼다.
+왜냐하면 기존의 선형회귀모델에서는 오차항이 정규분포를 따른다든가 하는 몇 가지 제약조건이 전제되야하는데
+범주형 데이터에서는 제약조건에 부합하지 않는 경우도 종종 발생하기 때문이다. 
 
-그래서 새로운 분석 방법인 로지스틱 회귀모델은 새로운 관측치가 왔을 때 이를 기존 범주 중 하나로 예측하게 한다.
-이를 가리켜 범주예측 이라고 한다.
-
-범주예측에는
-- 제품이 불량인지 양품인지
-- 고객이 이탈고객인지 잔류고객인지
-- 카드 거래가 정상인지 사기인지
-- 내원 고객이 질병이 있는지 없는지​
-등과 같이 결과값이 범주로 되어 있는 경우이다.
+- 로지스틱 회귀모델 사용
+ 새로운 관측치가 왔을 때 이를 기존 범주 중 하나로 예측하게 한다. (범주예측)
+ - 범주예측에는
+    - 제품이 불량인지 양품인지
+    - 고객이 이탈고객인지 잔류고객인지
+    - 카드 거래가 정상인지 사기인지
+    - 내원 고객이 질병이 있는지 없는지
+    등과 같이 결과값이 범주로 되어 있는 경우이다.
 
 이론적인 배경에 대해 설명해보면
 
-![image](https://user-images.githubusercontent.com/79880336/110303443-bbf9c200-803d-11eb-87f4-b82b288e6628.png)
-
+![image](https://user-images.githubusercontent.com/79880336/110327748-ba3ff680-805d-11eb-8b9b-c147885f285d.png)
 
 ## 로직스틱 회귀모델의 형태
+
+- 출력변수가 연속형이 아닌 이진범주형 질병유무?
 아래와 같이 질병유무 데이터의 Y값이 0과 1의 범주형 변수로 주어질 경우
 
 ![image](https://user-images.githubusercontent.com/79880336/110303539-d7fd6380-803d-11eb-9547-60bfb903c91a.png)
+
+- 두 변수 사이의 관계식은 선형?
 
 ![image](https://user-images.githubusercontent.com/79880336/110303552-dc298100-803d-11eb-8603-583e59210145.png)
 
