--- a/Study/뉴럴네트워크.md
+++ b/Study/뉴럴네트워크.md
@@ -56,6 +56,8 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/111064305-99145580-84f6-11eb-83bb-9728a6830613.png)
 
+- 경사하강법 (Gradient Descent Method)
+
 ![image](https://user-images.githubusercontent.com/79880336/111064335-cc56e480-84f6-11eb-85f5-b8bf404c41f4.png)
 
 ![image](https://user-images.githubusercontent.com/79880336/111064339-d37df280-84f6-11eb-9e86-33cfe957cee6.png)
