--- a/Study/뉴럴네트워크.md
+++ b/Study/뉴럴네트워크.md
@@ -50,7 +50,12 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/111064226-21dec180-84f6-11eb-95c6-9fc8986b1cd8.png)
 
+(MSE : 오차가 커질수록 손실함수가 빠르게 증가하는 특징이 있다.)
+
 ![image](https://user-images.githubusercontent.com/79880336/111064253-505c9c80-84f6-11eb-9ab9-3ef7dec18228.png)
+
+(CEE : 정확히 맞추면 오차가 0. 틀릴수록 오차가 무한히 증가하는 특징이 있다.)
+
 
 #### 뉴럴네트워크 학습 - 경사하강법
 
