--- a/Study/뉴럴네트워크.md
+++ b/Study/뉴럴네트워크.md
@@ -65,5 +65,10 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/111064335-cc56e480-84f6-11eb-85f5-b8bf404c41f4.png)
 
+- 학습률의 선택
+ 
 ![image](https://user-images.githubusercontent.com/79880336/111064339-d37df280-84f6-11eb-9e86-33cfe957cee6.png)
 
+![image](https://user-images.githubusercontent.com/79880336/111071715-d094f900-851a-11eb-8ef0-f0ff4d7aee8b.png)
+
+적절한 학습률(Learning rate)을 선택하는 것은 매우 중요하다
