--- a/Study/5. 정규화모델.md
+++ b/Study/5. 정규화모델.md
@@ -2,8 +2,8 @@
 
 ## Good Model
 What is a good Model?
--> 현재 데이터(training data)를 잘 설명하는 모델 => Explanatory Modeling
--> 미래 데이터(testing data)에 대한 예측 성능이 좋은 모델 => Predictive Modeling
+    - 현재 데이터(training data)를 잘 설명하는 모델 => Explanatory Modeling
+    - 미래 데이터(testing data)에 대한 예측 성능이 좋은 모델 => Predictive Modeling
     
 ## Good Explanatory Model
 현재 데이터(training data)를 잘 설명하는 모델
