--- a/Study/5. 정규화모델.md
+++ b/Study/5. 정규화모델.md
@@ -1,14 +1,13 @@
 # 정규화모델
 
-## Good Model
+### Good Model
 What is a good Model?
-    - 현재 데이터(training data)를 잘 설명하는 모델 => Explanatory Modeling
-    - 미래 데이터(testing data)에 대한 예측 성능이 좋은 모델 => Predictive Modeling
+    - 현재 데이터(training data)를 잘 설명하는 모델 
+    => Explanatory Modeling (Training error를 minimize하는 모델)
     
-## Good Explanatory Model
-현재 데이터(training data)를 잘 설명하는 모델
-(Training error를 minimize하는 모델)
-
+    - 미래 데이터(testing data)에 대한 예측 성능이 좋은 모델 
+    => Predictive Modeling
+    
 ![image](https://user-images.githubusercontent.com/79880336/111635769-32b36e00-883b-11eb-8f06-6f338a08cfae.png)
 
 ## Good Predictive Model
