--- a/Study/5. 정규화모델.md
+++ b/Study/5. 정규화모델.md
@@ -88,3 +88,30 @@ Ridge Regression에서 람다값이 너무 크다면 모든 회귀계수가 0에
 따라서 그 사이의 가장 적합한 람다값을 찾아주는 과정이 필요합니다.
 
 ![image](https://user-images.githubusercontent.com/79880336/111636052-77d7a000-883b-11eb-9c2c-86fae664f949.png)
+
+## Lasso Regression
+
+![image](https://user-images.githubusercontent.com/79880336/111643776-90978400-8842-11eb-975e-547425ff3755.png)
+
+![image](https://user-images.githubusercontent.com/79880336/111643231-22eb5800-8842-11eb-9d02-2e66d47753a0.png)
+
+### Lasso Parameter
+
+![image](https://user-images.githubusercontent.com/79880336/111644192-f126c100-8842-11eb-9fc7-7f235fa69ab0.png)
+
+![image](https://user-images.githubusercontent.com/79880336/111644232-fc79ec80-8842-11eb-9b0f-58609efa6434.png)
+
+## Ridge, Lasso Regerssion 차이
+
+Ridge Regression은 변수간 상관관계가 높은 상황에서 좋은 예측 성능을 보이는 장점이 있습니다.
+
+그러나 모든 변수를 사용하기때문에 변수의 수가 아주 많을 때는 모델 성능 저하에 영향을 미치는 단점이 있습니다.
+
+Lasso Regression은 많은 변수에서 사용할 수 있는 장점이 있지만,
+만약 변수간 상관관계가 높은 변수들이 많다면 
+단 한개의 변수만 채택되고 다른 변수들의 계수는 0이 되어 정보의 손실에 따른 정확성의 저하가 올 수 있는 단점이 있습니다.
+
+따라서 상황에 따라 두가지 방법을 잘 선택하여 예측 모델을 만드는 것이 중요합니다.
+또한 이 두가지를 보완한 Elastic Net Regression 이라는 분석방법도 존재합니다.
+
+
