--- a/Study/5. 정규화모델.md
+++ b/Study/5. 정규화모델.md
@@ -103,6 +103,8 @@ Ridge Regression에서 람다값이 너무 크다면 모든 회귀계수가 0에
 
 ## Ridge, Lasso Regerssion 차이
 
+![image](https://user-images.githubusercontent.com/79880336/111645105-c38e4780-8843-11eb-8c80-2f2d2fc24caf.png)
+
 Ridge Regression은 변수간 상관관계가 높은 상황에서 좋은 예측 성능을 보이는 장점이 있습니다.
 
 그러나 모든 변수를 사용하기때문에 변수의 수가 아주 많을 때는 모델 성능 저하에 영향을 미치는 단점이 있습니다.
