--- a/Study/6. 의사결정나무.md
+++ b/Study/6. 의사결정나무.md
@@ -44,6 +44,10 @@ A 와 B는 같은 형식의 다른 표현이라고 할 수 있다.
 2. 공간상에 나타내긴 하였으나 2차원 혹은 3차원 까지만 표현이 가능함
 3. 차원에 상관없이 표현이 가능함
 
+![image](https://user-images.githubusercontent.com/79880336/111901590-7e088f00-8a7c-11eb-8a59-cec4d8543089.png)
+
+- CM : 회귀나무모델로부터 예측학 Rm 부분의 예측값 
+
 ![image](https://user-images.githubusercontent.com/79880336/111900590-d50b6580-8a76-11eb-808f-671a677832dc.png)
 
 Cm값은 각 분할에 속해 있는 y값들의 평균으로 예측했을 때 오류가 최소가 됨
