--- a/Study/6.의사결정나무(2).md
+++ b/Study/6.의사결정나무(2).md
@@ -31,7 +31,7 @@ K() 함수는 해당 끝노드에 들어가 있는 여러가지 범주 해당하
 
 (실제데이터 -모델에서의 예측값)^2의 값을 하였는데 
 - 분류모델에서는 실제 데이터의 값이 범주형이기 때문에 불가능 함
-- > 그래서 다르게 정의함
+- 그래서 다르게 정의함
 - 주로 분류에서 정의하는 비용함수는 크게 세가지가 존재함
 
 1. Misclassification rate : 매칭되지 않는 것을 최소화 하고 싶은 것
