--- a/Study/6.의사결정나무(2).md
+++ b/Study/6.의사결정나무(2).md
@@ -52,7 +52,7 @@ x축은 p의 값이 됨 ( 0~1의 범주를 갖고 있음 )
 
 위의 큰 대괄호가 비용함수, 계속해서 분지를 찾아 낼 수 있음. 
 
-분할법칙
+### 분할법칙
 - 분할변수와 분할기준은 목표변수의 분포를 가장 잘 구별해주는 쪽으로 정함
 
 - 목표변수의 분포를 잘 구별해주는 측도로 순수도(purity) 또는 불순도(impurity)를 정의
@@ -64,15 +64,28 @@ x축은 p의 값이 됨 ( 0~1의 범주를 갖고 있음 )
 
 불순도의 식이 비용함수이다
 
-#  Information Gain
+#### 예시
+
+![image](https://user-images.githubusercontent.com/79880336/111904472-84056c80-8a8a-11eb-8861-36503a51199e.png)
+
+(오분률율이 제일 작을 때의 j,s 를 찾는 것)
+
+![image](https://user-images.githubusercontent.com/79880336/111904539-db0b4180-8a8a-11eb-8027-64f0f0f355a9.png)
+
+
+#  Information Gain (
 
 ![image](https://user-images.githubusercontent.com/79880336/111902448-de013480-8a80-11eb-9dfe-92f9ed02e75f.png)
 
 information gain은 정보를 얻는 것이다.
 
-entropy는 혼잡도, 무질서도이다. 어떤 변수가 entropy를 크게 감소시켰다면 그 변수는 중요한 변수일 것이다.
+entropy는 혼잡도, 무질서도이다. 
+
+어떤 변수가 entropy를 크게 감소시켰다면 그 변수는 중요한 변수일 것이다.
 
 S는 우리가 갖고 있는 총 데이터라고 생각하면 됨
+
+
 
 ![image](https://user-images.githubusercontent.com/79880336/111902482-fbce9980-8a80-11eb-954f-452ce4447f56.png)
 
