--- a/Study/랜덤포레스트.md
+++ b/Study/랜덤포레스트.md
@@ -68,13 +68,25 @@ Bootstrapping이란? sampling 기법이고 추출하는 것이다.
 
 #### 랜덤포레스트 특성
 
+- Random Subspace
+
+![image](https://user-images.githubusercontent.com/79880336/112489273-a4eafc00-8dc1-11eb-9fd8-5fff75596e28.png)
+
+1. 입력변수를 무작위 선택
+2. 선택된 입력 변수 중에 분할될 변수를 선택
+3. 이러한 과정을 full-grown tree 될때까지 반복
+
+![image](https://user-images.githubusercontent.com/79880336/112489413-c2b86100-8dc1-11eb-9245-7b23867918f7.png)
+
 - Generalization Error 
-- 
+
 ![image](https://user-images.githubusercontent.com/79880336/112161180-37f32d00-8c2e-11eb-8281-edfcb136011d.png)
 
 - 중요변수선택
-- 
+
 ![image](https://user-images.githubusercontent.com/79880336/112161469-87d1f400-8c2e-11eb-91c1-0b10aaafb281.png)
+
+![image](https://user-images.githubusercontent.com/79880336/112489762-188d0900-8dc2-11eb-807d-aa8a64f63664.png)
 
 ![image](https://user-images.githubusercontent.com/79880336/112162116-19416600-8c2f-11eb-81e7-30f01eff8295.png)
 
