--- a/Study/8. SVM모델.md
+++ b/Study/8. SVM모델.md
@@ -1,10 +1,8 @@
 # SVM 모델 (Support Vector Machines)
 
 - 신경망에 비해 간결함
-
--분류나 회귀 분석에 사용가능하지만 주로 분류에 사용
-
--기본적으로 Hyperplane을 이용해서 분류
+- 분류나 회귀 분석에 사용가능하지만 주로 분류에 사용
+- 기본적으로 Hyperplane을 이용해서 분류
 
 ### Separating Hyperplane
  
@@ -14,9 +12,8 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/112723375-7bf97100-8f51-11eb-8d0c-3360c8768837.png)
 
-- Hyperplane 을 찾는게 목적
+- Margin 을 최대화하는 Hyperplane 을 찾는게 목적
 - w, b 를 찾자
-- Margin 을 최대한 하는 것을 찾자
 
 #### Geometric Margin
 
