--- a/Study/8. SVM모델.md
+++ b/Study/8. SVM모델.md
@@ -4,7 +4,7 @@
 - 분류나 회귀 분석에 사용가능하지만 주로 분류에 사용
 - 기본적으로 Hyperplane을 이용해서 분류
 
-### Separating Hyperplane
+## Separating Hyperplane
  
 ![image](https://user-images.githubusercontent.com/79880336/112723318-2755f600-8f51-11eb-835e-157f90508427.png)
 
@@ -15,7 +15,7 @@
 - Margin 을 최대화하는 Hyperplane 을 찾는게 목적
 - w, b 를 찾자
 
-#### Geometric Margin
+### Geometric Margin
 
 ![image](https://user-images.githubusercontent.com/79880336/112723416-b105c380-8f51-11eb-9aa8-642cb2e43487.png)
 
@@ -29,20 +29,21 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/112723565-9aac3780-8f52-11eb-9dcd-1e29801edb36.png)
 
-- Lagrangina Formulation
+- Lagrangian Formulation
+(제약된 문제를 제약없이 풀기) 
 
 ![image](https://user-images.githubusercontent.com/79880336/112724019-aef13400-8f54-11eb-9358-19d85bbde821.png)
 
 ![image](https://user-images.githubusercontent.com/79880336/112723658-0b535400-8f53-11eb-8c7e-d5a7d9284ebe.png)
 
-- Lagrangina Dual
+- Lagrangian Dual
 (목적식과 제약식을 하나로 만들기)
 
 ![image](https://user-images.githubusercontent.com/79880336/112723736-62f1bf80-8f53-11eb-8fb6-2cb2887f13d7.png)
 
 ![image](https://user-images.githubusercontent.com/79880336/112723748-7735bc80-8f53-11eb-95eb-77e527630c74.png)
 
-### Classifying New Data Points
+- 최종 : w, b(베타)를 찾았으면 새로운 데이터를 분류하기 (Classifying New Data Points)
 
 ![image](https://user-images.githubusercontent.com/79880336/112723864-f6c38b80-8f53-11eb-96de-08c3fb86ed16.png)
 
@@ -50,11 +51,13 @@
 
 
 #  Linearly Nonesparable Case
-(Soft Margin SVM)
+- Soft Margin SVM <-> Hard Margin SVM, 선형으로 분리
+
+![image](https://user-images.githubusercontent.com/79880336/112857895-4b017380-90ec-11eb-86e1-992f8daf9f3c.png)
+
+- 오른쪽이 선형으로 분리할 수 없는 경우
 
 ![image](https://user-images.githubusercontent.com/79880336/112724277-ef9d7d00-8f55-11eb-9da7-f491d76c2450.png)
-
-- 선형으로 분리할 수 없는 경우
 
 ![image](https://user-images.githubusercontent.com/79880336/112724304-0c39b500-8f56-11eb-875f-c7672fb3f7b1.png)
 
