--- a/Study/8. SVM모델.md
+++ b/Study/8. SVM모델.md
@@ -57,8 +57,6 @@
 
 - 오른쪽이 선형으로 분리할 수 없는 경우
 
-![image](https://user-images.githubusercontent.com/79880336/112724277-ef9d7d00-8f55-11eb-9da7-f491d76c2450.png)
-
 ![image](https://user-images.githubusercontent.com/79880336/112724304-0c39b500-8f56-11eb-875f-c7672fb3f7b1.png)
 
 - Margin 최대화
@@ -67,7 +65,23 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/112724377-62a6f380-8f56-11eb-99cc-1be7866abc6f.png)
 
+- Lagrangian Formulation
+
+![image](https://user-images.githubusercontent.com/79880336/112858402-c9f6ac00-90ec-11eb-876e-7d9eda9ff334.png)
+
+![image](https://user-images.githubusercontent.com/79880336/112858465-daa72200-90ec-11eb-82f4-608721897a5c.png)
+
+- Lagrangian Dual
+
+![image](https://user-images.githubusercontent.com/79880336/112858570-f5799680-90ec-11eb-8558-ee8b24944e0c.png)
+
+(차이점은 알파가 0과 C사이에 있는것)
+
+![image](https://user-images.githubusercontent.com/79880336/112858734-1cd06380-90ed-11eb-91ef-d43ffc9808e6.png)
+
+
 # Kernel Methods for Nonlinear Classification
+- 비선형 SVM
 
 ![image](https://user-images.githubusercontent.com/79880336/112724463-de08a500-8f56-11eb-8dc3-8e1e0e235d7e.png)
 
@@ -79,6 +93,8 @@
 
 ![image](https://user-images.githubusercontent.com/79880336/112724566-50798500-8f57-11eb-9e23-1ef2281a0ac3.png)
 
+![image](https://user-images.githubusercontent.com/79880336/112859330-b0a22f80-90ed-11eb-85f7-83056b926ff5.png)
+
 - Kernel Functions 
 
 ![image](https://user-images.githubusercontent.com/79880336/112724658-c978dc80-8f57-11eb-9b9d-d3c7cf901ee5.png)
@@ -86,6 +102,12 @@
 -  비선형 모델을 사용할때는 Kernel 설정이 필요함
 
 ![image](https://user-images.githubusercontent.com/79880336/112724865-a7cc2500-8f58-11eb-9a9e-62cefd1c133e.png)
+
+- example, 커널 종류에 따라 달라짐
+
+![image](https://user-images.githubusercontent.com/79880336/112859690-070f6e00-90ee-11eb-9db0-aac32faf90e6.png)
+
+(test error가 더 적은 모델이 좋은거)
 
 
 
