--- a/Study/10.PCA(주성분분석).md
+++ b/Study/10.PCA(주성분분석).md
@@ -1,4 +1,4 @@
-# PCE (Principal Component Analysis, 주성분분석)
+# PCA (Principal Component Analysis, 주성분분석)
 
 1. 주성분 분석 개요
 2. 주성분 분석 수리적 배경
@@ -25,6 +25,8 @@
 ![image](https://user-images.githubusercontent.com/79880336/113510242-e1261580-9594-11eb-82d0-6a222037fc16.png)
 : 1번 분산 최대화, 2번 분산을 최소화
 
+![image](https://user-images.githubusercontent.com/79880336/113510930-25ff7b80-9598-11eb-8cc2-4837911ad45d.png)
+
 ## PCA 수리적 배경
 - 공분산의 성질
 (공분산은 두 확률변수 X와 Y가 취하는 값이 동일한 방향으로 흘러나갈지, 반대 방향으로 흘러나갈지의 결합산포정도를 나타내는 측도)
@@ -33,3 +35,17 @@
 
 ## PCA 알고리즘 - 주성분 주출
   
+![image](https://user-images.githubusercontent.com/79880336/113510580-855c8c00-9596-11eb-9d80-93518234ec97.png)
+![image](https://user-images.githubusercontent.com/79880336/113510883-eb95de80-9597-11eb-9e12-504e5b3fbedd.png)
+
+![image](https://user-images.githubusercontent.com/79880336/113511406-8f808980-959a-11eb-8258-ae663e694d82.png )
+
+### PCA 한계
+
+![image](https://user-images.githubusercontent.com/79880336/113511469-e71ef500-959a-11eb-8124-23463acc09a6.png)
+
+![image](https://user-images.githubusercontent.com/79880336/113511477-f1d98a00-959a-11eb-96b8-998534fd6796.png)
+
+
+
+
