--- a/딥러닝자연처리/Study2_7,8,12.md
+++ b/딥러닝자연처리/Study2_7,8,12.md
@@ -15,3 +15,8 @@
 : Embedding is dense vector with similarity
 
 - Word2Vec 은 Embedding 중 하나
+
+# WMD 문서 유사도 구하기
+
+# [딥러닝 기계번역] 시퀀스 투 시퀀스 + 어텐션 모델
+
