--- a/딥러닝자연처리/Study2_7,8,12.md
+++ b/딥러닝자연처리/Study2_7,8,12.md
@@ -1,21 +1,23 @@
-# 단어 벡터 변환 (Word2Vec)
+## 단어 벡터 변환 (Word2Vec)
 
-- Can text be input in deep learning? NO
-- Can number be input in deep learning? Yes
+### Can text be input in deep learning? NO
+### Can number be input in deep learning? Yes
 
-- What is Enconing? Convert text to number
+### What is Enconing? 
+- Convert text to number
 
-- What is One Hot Encoding? Conver text to vector
+### What is One Hot Encoding? 
+- Conver text to vector
 
-- One Hot Encoding 단점
-1. 유사도가 없다 (One Hot Encondig doesn't have similarity)
+### One Hot Encoding 단점
+- 유사도가 없다 (One Hot Encondig doesn't have similarity)
 
 - Embedding (언어의 벡터화)
 : Embedding is dense vector with similarity 
 
 - Word2Vec 은 Embedding 중 하나
 
-# WMD 문서 유사도 구하기 (Word mover's distance)
+## WMD 문서 유사도 구하기 (Word mover's distance)
 
 - What is WMD?
 1. Novel distance function between text documents
@@ -31,7 +33,7 @@
 4. GoogleNews-vectors-negative300.bin.gz
 
 
-# [딥러닝 기계번역] 시퀀스 투 시퀀스 + 어텐션 모델
+## [딥러닝 기계번역] 시퀀스 투 시퀀스 + 어텐션 모델
 
 - English and Korean has different word order
   - English = Sebject / Verb / Object , Korean = Sebject / Object / Verb
