--- a/딥러닝자연처리/Study2_7,8,12.md
+++ b/딥러닝자연처리/Study2_7,8,12.md
@@ -1,15 +1,15 @@
 ## 단어 벡터 변환 (Word2Vec)
 
-### Can text be input in deep learning? NO
-### Can number be input in deep learning? Yes
+#### Can text be input in deep learning? NO
+#### Can number be input in deep learning? Yes
 
-### What is Enconing? 
+#### What is Enconing? 
 - Convert text to number
 
-### What is One Hot Encoding? 
+#### What is One Hot Encoding? 
 - Conver text to vector
 
-### One Hot Encoding 단점
+#### One Hot Encoding 단점
 - 유사도가 없다 (One Hot Encondig doesn't have similarity)
 
 - Embedding (언어의 벡터화)
