--- a/딥러닝자연처리/Study2_7,8,12.md
+++ b/딥러닝자연처리/Study2_7,8,12.md
@@ -1,16 +1,16 @@
 ## 단어 벡터 변환 (Word2Vec)
 
-#### Can text be input in deep learning? NO
-#### Can number be input in deep learning? Yes
+- Can text be input in deep learning? NO (텍스트 안됨)
 
-#### What is Enconing? 
-- Convert text to number
+- Can number be input in deep learning? Yes (숫자 가능)
 
-#### What is One Hot Encoding? 
-- Conver text to vector
+- What is Enconing? Convert text to number
 
-#### One Hot Encoding 단점
-- 유사도가 없다 (One Hot Encondig doesn't have similarity)
+- What is One Hot Encoding? 
+: Conver text to vector
+
+- One Hot Encoding 단점
+: 유사도가 없다 (One Hot Encondig doesn't have similarity)
 
 - Embedding (언어의 벡터화)
 : Embedding is dense vector with similarity 
@@ -33,12 +33,17 @@
 4. GoogleNews-vectors-negative300.bin.gz
 
 
-## [딥러닝 기계번역] 시퀀스 투 시퀀스 + 어텐션 모델
+## [딥러닝 기계번역] 시퀀스 투 시퀀스 + 어텐션
 
 - English and Korean has different word order
   - English = Sebject / Verb / Object , Korean = Sebject / Object / Verb
 
-- RNN
+- How about sequence of words translation? Use RNN
+
+- We call it Encoder Decoder Architecture or Sequence to Sequence model
+
+- Encoder 역할 : Encoder reads and encodes a source sentence into a fixed length vector
+- Decoder 역할 : Decoder then outputs a translation from the encoded vector (context vector)
 
 - Encoder -> Context vector -> Decoder (Context vector = Fixed size)
   - 단점 : 문장이 짧으면 상관없지만, 문장이 길어지만 문제가 된다
